--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="../img/earth2.png" alt="First slide">
-              <h5>Earth</h5>
-              <p>where we r located</p>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Second slide">
+              <img class="d-block w-100" src="../img/saturn.png" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="..." alt="Third slide">
