--- a/index.html
+++ b/index.html
@@ -54,30 +54,27 @@
           </nav>
         <!--navbar-->
         <!--carousel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="../img/earth2.png" alt="First slide">
+              <img class="d-block w-100" src="earth.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../img/saturn.png" alt="Second slide">
+              <img class="d-block w-100" src="saturn.png" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="..." alt="Third slide">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="next">
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
-    </div>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
           <!--carousel-->
         <!-- HTML -->
          <H1>Overview</H1>
