--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img class="d-block w-100" src="saturn.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="..." alt="Third slide">
+              <img class="d-block w-100" src="uranus.png" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
