--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#scrollspyHeading2">Second</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">other</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
                 <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
@@ -37,16 +37,6 @@
           </ul>
         </nav>
         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-          <h4 id="scrollspyHeading1">First heading</h4>
-          <p>...</p>
-          <h4 id="scrollspyHeading2">Second heading</h4>
-          <p>...</p>
-          <h4 id="scrollspyHeading3">Third heading</h4>
-          <p>...</p>
-          <h4 id="scrollspyHeading4">Fourth heading</h4>
-          <p>...</p>
-          <h4 id="scrollspyHeading5">Fifth heading</h4>
-          <p>...</p>
         </div>
         <!--navbar-->
         <!--carousel-->
