--- a/index.html
+++ b/index.html
@@ -40,27 +40,30 @@
         </div>
         <!--navbar-->
         <!--carousel-->
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="earth.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="saturn.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="uranus.png" alt="Third slide">
-            </div>
+        <div id="carouselExampleIndicatorsHero" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="2"></button>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="../img/earth2.png" class="d-block w-100" alt="earth2">
+              </div>
+              <div class="carousel-item">
+                  <img src="../img/saturn.png" class="d-block w-100" alt="saturn">
+              </div>
+              <div class="carousel-item">
+                  <img src="../img/uranus.png" class="d-block w-100" alt="uranusheh">
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </button>
+      </div>
           <!--carousel-->
         <!-- HTML -->
          <H1>Overview</H1>
