--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   <!-- Slides -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://via.placeholder.com/800x400?text=First+Slide" class="d-block w-100" alt="First Slide">
+      <img src="earth2.png" class="d-block w-100" alt="First Slide">
     </div>
     <div class="carousel-item">
-      <img src="https://via.placeholder.com/800x400?text=Second+Slide" class="d-block w-100" alt="Second Slide">
+      <img src="saturn.png" class="d-block w-100" alt="Second Slide">
     </div>
     <div class="carousel-item">
-      <img src="https://via.placeholder.com/800x400?text=Third+Slide" class="d-block w-100" alt="Third Slide">
+      <img src="uranus.png" class="d-block w-100" alt="Third Slide">
     </div>
   </div>
 
