--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <!--navbar-->
         <!--carousel-->
-        div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
   <!-- Indicators -->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
