--- a/index.html
+++ b/index.html
@@ -40,42 +40,30 @@
         </div>
         <!--navbar-->
         <!--carousel-->
-       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-  <!-- Indicators -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-
-  <!-- Slides -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="earth2.png" class="d-block w-100" alt="First Slide">
+     <div id="carouselExampleIndicatorsHero" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="2"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../img/balloon-1.jpg" class="d-block w-100" alt="balloon-1">
+            </div>
+            <div class="carousel-item">
+                <img src="../img/balloon-2.jpg" class="d-block w-100" alt="balloon-2">
+            </div>
+            <div class="carousel-item">
+                <img src="../img/balloon-3.jpg" class="d-block w-100" alt="balloon-3">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
     </div>
-    <div class="carousel-item">
-      <img src="saturn.png" class="d-block w-100" alt="Second Slide">
-    </div>
-    <div class="carousel-item">
-      <img src="uranus.png" class="d-block w-100" alt="Third Slide">
-    </div>
-  </div>
-
-  <!-- Controls -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
           <!--carousel-->
         <!-- HTML -->
          <H1>Overview</H1>
