Sun, May 18, 2025, 6:01 PM -04:00

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/balloon-1.jpg" class="d-block w-100" alt="balloon-1">
+                <img src="../img/earth2.png" class="d-block w-100" alt="earth">
             </div>
             <div class="carousel-item">
-                <img src="../img/balloon-2.jpg" class="d-block w-100" alt="balloon-2">
+                <img src="../img/saturn.png" class="d-block w-100" alt="saturn">
             </div>
             <div class="carousel-item">
-                <img src="../img/balloon-3.jpg" class="d-block w-100" alt="balloon-3">
+                <img src="../img/uranus.png" class="d-block w-100" alt="uranus">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
