Sun, May 18, 2025, 6:06 PM -04:00

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
          <H1>Overview</H1>
 <p>This website was created with the intent of educating people on atronomy in a fun an interactive way. It is my misson to educate others on the topic of Atronomy because it is something that is not popular and known about today. This website is very insightful and contains a fun interactive game about different planets and stars. i designed this website this way so that the player learns about  </p>
 
+<!--cards-->
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<!--cards-->
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- <script src="script.js"></script> -->
         <script>
