--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
+</div><div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Bootstrap Card</h5>
+      <p class="card-text">This card is centered with Bootstrap.</p>
+    </div>
+  </div>
 </div>
 <!--cards-->
 
