Sun, May 18, 2025, 6:32 PM -04:00

--- a/index.html
+++ b/index.html
@@ -68,7 +68,21 @@
         <!-- HTML -->
          <H1>Overview</H1>
 <p>This website was created with the intent of educating people on atronomy in a fun an interactive way. It is my misson to educate others on the topic of Atronomy because it is something that is not popular and known about today. This website is very insightful and contains a fun interactive game about different planets and stars. i designed this website this way so that the player learns about  </p>
-
+<!--collapse-->
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-target
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+  </div>
+</div>
+<!--collapse-->
 <!--cards-->
 <div class="card" style="width: 18rem;">
   <div class="card-body">
@@ -91,7 +105,7 @@
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-  
+
 </div><div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
   <div class="card" style="width: 18rem;">
     <div class="card-body">
