--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
   </div>
 </div>
 <!--cards-->
- <footer>
-        <p>Contact: (555) 555-1234 | SHABR, Inc.</p>
-        <p>1234 Shabr Road, Somewhere, OT 80013</p>
-    </footer>
+ <footer style="border-top: 5px solid #333; padding: 20px; text-align: center;">
+  © 2025 My Website
+</footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- <script src="script.js"></script> -->
