--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
   </div>
 </div>
 <!--cards-->
- <footer style="border-top: 5px solid #333; padding: 20px; text-align: center;">
-  © 2025 My Website
+ <footer style="text-align: center; padding: 20px; background-color: #f2f2f2; color: #555;">
+  &copy; 2025 Your Company Name. All rights reserved.
 </footer>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- <script src="script.js"></script> -->
         <script>
