--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </div>
 </div>
 <!--cards-->
- <footer style="text-align: center; padding: 20px; background-color: #f2f2f2; color: #555;">
+ <footer style="text-align: center; padding: 20px; background-color: #000000; color: #555;">
   &copy; 2025 Your Company Name. All rights reserved.
 </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
