--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide-to="2"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
