Tue, May 20, 2025, 11:23 PM -04:00

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
           <!--carousel-->
         <!-- HTML -->
     <H1>Overview</H1>
-    <gg>
-<p>This website was created with the intent of educating people on atronomy in a fun an interactive way. It is my misson to educate others on the topic of Atronomy because it is something that is not popular and known about today. This website is very insightful and contains a fun interactive game about different planets and stars. i designed this website this way so that the player learns about </p>
-</gg>
+<p class=" >This website was created with the intent of educating people on atronomy in a fun an interactive way. It is my misson to educate others on the topic of Atronomy because it is something that is not popular and known about today. This website is very insightful and contains a fun interactive game about different planets and stars. i designed this website this way so that the player learns about </p>
 <!--collapse-->
 <p>
   <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
