--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/earth2.png" class="d-block w-100" alt="earth">
+                <img src="tool/earth2.png" class="d-block w-100" alt="earth">
             </div>
             <div class="carousel-item">
-                <img src="../img/saturn.png" class="d-block w-100" alt="saturn">
+                <img src=tool/saturn.png" class="d-block w-100" alt="saturn">
             </div>
             <div class="carousel-item">
-                <img src="../img/uranus.png" class="d-block w-100" alt="uranus">
+                <img src="tool/uranus.png" class="d-block w-100" alt="uranus">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
