--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <div class="carousel-item">
                 <img src="tool/uranus.png" class="d-block w-100" alt="uranus">
             </div>
+            <div class="carousel-item">
+                <img src="tool/sun.png" class="d-block w-100" alt="uranus">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
