Wed, May 21, 2025, 8:52 AM -04:00

--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
             <div class="carousel-item">
                 <img src="tool/sun.png" class="d-block w-100" alt="uranus">
             </div>
+            <div class="carousel-item">
+                <img src="tool/mercury.png" class="d-block w-100" alt="uranus">
+            </div>
+            <div class="carousel-item">
+                <img src="tool/venus.png" class="d-block w-100" alt="uranus">
+            </div>
+             <div class="carousel-item">
+                <img src="tool/mars.png" class="d-block w-100" alt="uranus">
+            </div>
+              <div class="carousel-item">
+                <img src="tool/jupiter.png" class="d-block w-100" alt="uranus">
+            </div>
+             <div class="carousel-item">
+                <img src="tool/neptune.png" class="d-block w-100" alt="uranus">
+            </div>
+             <div class="carousel-item">
+                <img src="tool/moon.png" class="d-block w-100" alt="uranus">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsHero" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
